# smart-brain-vn

./: .env.example  .gitignore  ANIMATION_IMPLEMENTATION_GUIDE.md  ANIMATION_IMPLEMENTATION_GUIDE.vi.md  QUICK_START_ANIMATIONS.md  QUICK_START_ANIMATIONS.vi.md  README.md  README.vi.md  docker-compose.infra.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  dev.sh
backend/migrations/: 20240101000001_create_users.sql  20240101000002_create_exercises.sql  20240101000003_create_achievements.sql  20240101000004_create_progress.sql  20240101000005_create_parent_child.sql  20240101000006_create_leaderboard.sql  20240101000007_create_question_bank.sql  20240101000008_create_skill_profiles.sql  20240101000009_create_practice_sessions.sql  20240101000010_create_practice_results.sql  20240101000011_add_xp_to_users.sql  20240101000012_create_themes.sql
backend/src/: error.rs  main.rs  state.rs
backend/src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs
backend/src/config/: mod.rs
backend/src/db/: mod.rs
backend/src/domain/: leaderboard.rs  mod.rs  practice_session.rs  question.rs  skill_profile.rs  user.rs
backend/src/dto/: auth.rs  leaderboard.rs  mod.rs  practice.rs  session.rs  xp.rs
backend/src/handlers/: achievement.rs  auth.rs  exercise.rs  health.rs  leaderboard.rs  mod.rs  parent.rs  practice.rs  progress.rs  session.rs  user.rs  xp.rs
backend/src/middleware/: rate_limit.rs
backend/src/models/: mod.rs  theme.rs  user.rs
backend/src/repository/: leaderboard_repository.rs  mod.rs  question_repository.rs  (+4 more)
docs/: api.md  (+9 more)
(+231 files in other folders)
