[package]
name = "smartmath-backend"
version = "0.1.0"
edition = "2021"
authors = ["SmartMath Team"]
description = "SmartMath Kids - Production Backend API"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Data Types
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Configuration
dotenvy = "0.15"

# Cache (DragonflyDB - Redis compatible)
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
bb8 = "0.8"
bb8-redis = "0.17"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error Handling
thiserror = "2"
anyhow = "1"
async-trait = "0.1"

# Utilities
rand = "0.8"
validator = { version = "0.18", features = ["derive"] }
futures-util = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
